bots img added, functions adapted to change the bot according to the type of encryption, issue with pace making the code go out of bounds fixed, try catch clause added to base64 decryption method

--- a/styles/index.css
+++ b/styles/index.css
@@ -58,6 +58,14 @@ main form {
     padding: 20px;
 }
 
+picture {
+    transition: 1s;
+    min-height: 150px;
+    min-width: 150px;
+    display: flex;
+    align-items: center;
+}
+
 .form-options-container {
     width: 100%;
 }
